# journaling-app

./: CMakeLists.txt  README.md  journal_app.cpp
dynamic_lib/: CMakeLists.txt  journal_dynamic_lib.cpp  journal_dynamic_lib.h
lib_tests/: CMakeLists.txt  dynamic_access_level_test.cpp  dynamic_init_test.cpp  dynamic_write_test.cpp  script_test.sh  static_access_level_test.cpp  static_init_test.cpp  static_write_test.cpp  test_dynamic_journal_access_levels.txt  test_dynamic_journal_write.txt
static_lib/: CMakeLists.txt  journal_static_lib.cpp  journal_static_lib.h
